--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
     <!-- aviso especial covid -->
     <div class="aviso-covid">
         <div>
-            <h3> <img src="img/iconos/alert.svg" alt="">DECLARACION OFICIAL SOBRE <b>COVID-19</b> </h3>    
+            <a href="#">
+            <h3> <img class="advertencia-icon" src="img/iconos/alert.svg" alt="">DECLARACION OFICIAL SOBRE <b>COVID-19</b><img class="external-link-icon" src="img/iconos/external-link.svg" alt=""> </h3>    
+            </a>
         </div>
     </div>
     <!-- aviso especial covid -->
